# Lemon-Gain

./: .gitignore  CMakeLists.txt  README.md  lemongainparamids.h
resource/: lemongaineditor.uidesc
source/: lemongaincids.h  lemongaincontroller.cpp  lemongaincontroller.h  lemongainentry.cpp  lemongainprocessor.cpp  lemongainprocessor.h  version.h
